fixed search fields to display ok on small screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ nav {
 
 .input-group {
   width: 400px;
-  height: 40px;
+  /* height: 40px; */
 }
 
 /*give margin left to the cards so that they will be center*/
